# t3g

./: CMakeLists.txt  readme.md
src/: arguments.cpp  arguments.hpp  board.cpp  board.hpp  configuration.cpp  configuration.hpp  game.hpp  main.cpp
